--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,22 +1,29 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap');
 
 body {
-  background-color: #ece9f3;
-  color: #4c1b5a;
+  background:#f6ffa3;
+  box-sizing: border-box;
   font-family: 'Roboto', sans-serif;
-  margin-top: 40px;
+  padding-top: 40px;
+  min-height: 100vh;
+}
+
+body, .button {
+  color: #F37335; 
 }
 
 .title {
-  font-weight: 700;
+  color: #fff; 
+  font-size: 2.25rem;
+  font-weight: 900;
   margin: 0 auto;
+  text-shadow: 3px 3px #ff1778, -1px 1px #ff1778, 1px -1px #ff1778, 0 -1px #ff1778, -1px 0 #ff1778, 0 1px #ff1778, 1px 0 #ff1778;
   width: max-content;
 }
 
 .books {
-  border: 3px solid #d3a6e0;
-  border-radius: 3px;
-  box-shadow: 2px 2px 2px 0 #c496d1, 4px 4px 9px 4px #eae2ee;
+  border: 1px solid #fff;
+  box-shadow: 3px 3px 0 1px #F37335, 0 0 0 1px #F37335;
   font-size: 1.25rem;
   margin: 25px auto;
   max-width: 670px;
@@ -27,8 +34,9 @@ body {
 .book {
   background-color: #fff;
   box-sizing: border-box;
+  color: #ff1778;
   display: flex;
-  font-weight: 600;
+  font-weight: 400;
   height: 40px;
   justify-content: space-between;
   padding: 8px 25px 0 10px;
@@ -36,27 +44,41 @@ body {
 }
 
 .book:nth-child(odd) {
-  background-color: #deb0ec;
+  background-color: #FDC830;
+  color: #fff;
 }
 
 .button {
   background-color: #fff;
   border: none;
-  box-shadow: -3px -3px 0 0 #c496d1, -3px 3px 0 0 #c496d1, 3px -3px 0 0 #c496d1, 4px 4px 0 4px #c496d1;
-  color: #4c1b5a; 
+  box-shadow: -1px -1px 0 0 #F37335, -1px 1px 0 0 #F37335, 1px -1px 0 0 #F37335, 2px 2px 0 2px #F37335;
+  color: #fff;
+  text-shadow: 2px 2px #F37335, -1px 1px #F37335, 1px -1px #F37335, 0 -1px #F37335, -1px 0 #F37335, 0 1px #F37335, 1px 0 #F37335;
   font-size: 1.2rem;
-  font-weight: 600;
+  font-weight: 700;
   height: max-content;
   padding: 0 5px;
 }
 
 .button:hover {
-  background-color: #deb0ec;
+  box-shadow: -1px -1px 0 0 #F37335, -1px 1px 0 0 #F37335, 1px -1px 0 0 #F37335, 1px 1px 0 1px #F37335;
+  transform: translate(2px, 2px);
+}
+
+.book:nth-child(even) .button {
+  box-shadow: -1px -1px 0 0 #ff1778, -1px 1px 0 0 #ff1778, 1px -1px 0 0 #ff1778, 2px 2px 0 2px #ff1778;
+  color: #fff;
+  text-shadow: 2px 2px #ff1778, -1px 1px #ff1778, 1px -1px #ff1778, 0 -1px #ff1778, -1px 0 #ff1778, 0 1px #ff1778, 1px 0 #ff1778;
+}
+
+.book:nth-child(even) .button:hover {
+  box-shadow: -1px -1px 0 0 #ff1778, -1px 1px 0 0 #ff1778, 1px -1px 0 0 #ff1778, 1px 1px 0 1px #ff1778;
+  transform: translate(2px, 2px);
 }
 
 .divider {
-  border: 2px solid #c496d1;
-  margin-top: 30px;
+  border: 1px solid #FDC830;
+  margin-top: 35px;
   max-width: 160px;
   width: 25%;
 }
@@ -71,11 +93,12 @@ body {
   align-items: flex-end;
   display: flex;
   flex-direction: column;
+  margin-top: 20px;
 }
 
 .formContent * {
   height: 30px;
-  margin: 8px 0;
+  margin: 10px 0;
   width: 100%;
 }
 
@@ -84,10 +107,15 @@ body {
 }
 
 .formContent input {
-  border: 3px solid #d3a6e0;
-  border-radius: 3px;
+  border: 1px solid #F37335;
   box-sizing: border-box;
+  box-shadow: none;
+  color: #F37335;
   font-size: 1.2rem;
   height: 40px;
   padding: 5px 10px;
+}
+
+.formContent input:focus, input:valid {
+  color: #ff1778;
 }
