--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,7 @@ body, .button {
 }
 
 .books {
+  background-color: #fff;
   border: 1px solid #fff;
   box-shadow: 3px 3px 0 1px #F37335, 0 0 0 1px #F37335;
   font-size: 1.25rem;
