Style contact page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -193,6 +193,39 @@ section {
   color: #ff1778;
 }
 
+.content {
+  align-items: left;
+  display: flex;
+  flex-direction: column;
+  font-size: 1.2rem;
+  justify-content: center;
+  margin: 0 auto;
+  padding: 35px 0;
+  width: max-content;
+} 
+
+.content p {
+  margin: 0;
+}
+
+.content p + p {
+  margin-bottom: 30px;
+}
+
+.content li {
+  list-style: none;
+}
+
+.content li:before {
+  content: "\2022"; 
+  color: #ff1778;
+  font-size: 2rem;
+  font-weight: bold;
+  display: inline-block;
+  transform: translateY(4px);
+  width: 0.7em;
+}
+
 .hidden {
   display: none;
 }
